# snake-2d-opengl

./: CMakeLists.txt  LICENSE  README.md
include/: apple.h  game.h  quad_renderer.h  shader.h  shader_manager.h  snake.h
include/glad/: glad.h
shaders/: shader.vert
src/: apple.cpp  game.cpp  glad.c  main.cpp  quad_renderer.cpp  shader.cpp  shader_manager.cpp  snake.cpp  stb_image.cpp
